--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
   <body>
+    <% flash.each do |name,msg| %>
+    <%= content_tag(:div, msg, class: "alert alert-info") %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
