--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,12 @@
 
 
   <body>
+    <%= render "layouts/navbar" %>
+    <div class="container">
     <% flash.each do |name,msg| %>
     <%= content_tag(:div, msg, class: "alert alert-info") %>
     <% end %>
     <%= yield %>
+  </div>
   </body>
 </html>
