--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="nav nav-default" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -15,7 +15,10 @@
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
         <li><%= link_to "New Movie", new_movie_path, class: "active" %></li>
-        <li><%= link_to "Account", edit_user_registration_path %></li>
+        <li class="sign-out"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+
+      </ul>
+
         <% else %>
         <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
         <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
