--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,47 +1,24 @@
-<%= form_for @movie, html: { multipart: true } do |f| %>
-  <% if movie.errors.any? %>
+<%= simple_form_for @movie, html: { multipart: true } do |f| %>
+  <% if @movie.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
+      <h2><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
 
       <ul>
-      <% movie.errors.full_messages.each do |message| %>
+      <% @movie.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <%= f.input :title, input_html: { class: "form-control"} %>
+    <%= f.input :description, input_html: { class: "form-control"} %>
+    <%= f.input :movie_length, input_html: { class: "form-control"} %>
+    <%= f.input :director, input_html: { class: "form-control"} %>
+    <%= f.input :rating, input_html: { class: "form-control"} %>
+    <%= f.input :image %>
   </div>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :movie_length %>
-    <%= f.text_field :movie_length %>
-  </div>
-
-  <div class="field">
-    <%= f.label :director %>
-    <%= f.text_field :director %>
-  </div>
-
-  <div class="field">
-    <%= f.label :rating %>
-    <%= f.text_field :rating %>
-  </div>
-
-  <div class="field">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
 <% end %>
