--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(review) do |f| %>
+<%= simple_form_for([@movie,@review]) do |f| %>
   <% if review.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -14,16 +14,19 @@
 
 
   <div class="field">
-    <%= f.label :rating %>
-    <%= f.number_field :rating %>
+    <div id="star-rating"></div>
+  </div>
+  <div class="form-group">
+    <%= f.input :comment, input_html: { class: "form-control"} %>
   </div>
 
-  <div class="field">
-    <%= f.label :comment %>
-    <%= f.text_area :comment %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
 <% end %>
+
+
+<script>
+  $('#star-rating').raty({
+    path: '/assets/',
+    scoreName: 'review[rating]'
+  });
+</script>
