--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -30,16 +30,25 @@
               </tr>
             </tbody>
           </table>
-          <%= link_to "Write a Review", new_movie_review_path(@movie) %>
         </div>
       </div>
       <div class="col-md-7 col-md-offset-1">
+        <div class="pull-right">
+          <span class="pull-right">
+            <% if current_user && current_user.is_member_of?(@movie) %>
+             <label class="label label-success"> 群组成员 </label>
+             <%= link_to("取消收藏", quit_movie_path(@movie), method: :post, class: "btn btn-default") %>
+            <% else %>
+             <label class="label label-warning"> 不是群组成员 </label>
+             <%= link_to("添加收藏", join_movie_path(@movie), method: :post, class: "btn btn-default") %>
+            <% end %>
+         </span>
+        <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-danger" %>
+        </div>
         <h1 class="review_title"><%= @movie.title %></h1>
         <p><%= @movie.description %></p>
-
         <% if @reviews.blank? %>
           <h3>No reviews just yet, would you like to add the first!</h3>
-          <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-danger" %>
         <% else %>
           <% @reviews.each do |review| %>
             <div class="reviews">
@@ -47,11 +56,10 @@
               <p><%= review.comment %></p>
             </div>
           <% end %>
-        <% end %>
+          <% end %>
       </div>
     </div>
   </div>
-</div>
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
