--- a/app/assets/stylesheets/account/favorites.scss
+++ b/app/assets/stylesheets/account/favorites.scss
@@ -1,7 +1,8 @@
-// Place all the styles related to the Movies controller here.
+// Place all the styles related to the account/favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.button-show{
-  padding: 0 0 20px 20px;
+.image{
+  width: 200px;
+  height:300px;
 }
