--- a/app/assets/stylesheets/account/reviews.scss
+++ b/app/assets/stylesheets/account/reviews.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the Movies controller here.
+// Place all the styles related to the account/reviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.button-show{
-  padding: 0 0 20px 20px;
-}
